fix(core/managed): give StatusBubbleStack its own z-index context (#8558)

--- a/app/scripts/modules/core/src/managed/StatusBubbleStack.less
+++ b/app/scripts/modules/core/src/managed/StatusBubbleStack.less
@@ -1,3 +1,10 @@
+.StatusBubbleStack {
+  // We want to create a new stacking context so that all
+  // the bubbles go in front/behind other elements as a unit
+  // vs. each individual bubble having its own stacking.
+  transform: translate(0px, 0px);
+}
+
 .StatusBubbleContainer {
   background-color: var(--color-alabaster);
   border-radius: 50%;
